correct hoer in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2955,13 +2955,13 @@ body.dark-mode {
 
 body.dark-mode .navbar-link:hover,
 body.dark-mode .navbar-link.active {
-  color:var(--old-rose);
+  color:hsl(357, 37%, 62%);
   text-decoration: none;
 }
 
 body.dark-mode .navbar-link::after {
   content: "";
-  background: var(--old-rose);
+  background: hsl(357, 37%, 62%));
   box-shadow: 0 0 10px #fcb0b480;
 }
 
