--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -246,11 +246,11 @@ swiper-container {
 }
 
 .readmore-anim .icon:hover {
-  color: red;
+  color:hsl(357, 37%, 62%);
 }
 
 .dark-mode .readmore-anim:hover {
-  color: red;
+  color: hsl(357, 37%, 62%);
   letter-spacing: 1px;
   transition: ease-in-out;
 }
